* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks

#### 0.8.2 (2010-03-05) ###############################

* CHANGE: Remove all logs except summary and exceptions
* CHANGE: Renamed .stella/logs/latest/request-exceptions to .stella/logs/latest/exceptions
* ADDED: JSON statistics log (.stella/logs/latest/stats)


#### 0.8.1.002 (2010-02-20) ###############################

* FIXED: fail on connection error
* CHANGE: Remove hanna dependency
* CHANGE: Now store complete headers sent rather than just configured. 


#### 0.8.1 (2010-02-10) ###############################

* FIXED: Handling of non ASCII characters with Nokogiri parsing in Ruby 1.9
* FIXED:  warning in Ruby 1.9
* FIXED: Setting of domain for HTTP authentication when the request URI 
  is a fully qualified URI. 
* CHANGE: Don't attempt to convert parameters or headers to ERB templates.
* CHANGE: Randomize order of usecase when generating load
* CHANGE: noparams and noheader now default to off. Must use with-param and with-header.
* ADDED: Stella.get


#### 0.8.0 (2010-01-16) ###############################

NOTE: The configuration language changed slightly in this release. 
See the README for more information on what needs to be updated. 

* FIXED: HTTP auth failures
* FIXED: Request timeouts should count towards failures
* FIXED: Stella::Client ID was changing between requests in certain conditions
* FIXED: HTTP delete now works correctly
* FIXED: Missing rsequential method in Container
* FIXED: Don't override user agent header when specified
* FIXED: variables testplan example. 
* FIXED: Print reports again when load test is interrupted 
* FIXED: Sporadic ERB template error under high concurrency
* CHANGE: A proper message displayed when no host specified
* CHANGE: Don't append httpclient info to User-Agent header
* CHANGE: param and header helper methods now return strings instead of Procs.