@@ -46,7 +46,6 @@ class Stella::CLI::Definition
   global :'with-header', "Include X-Stella-ID request header" 
   global :'with-param', "Include __stella query parameter header"
   global :R, :remote
-  global :E, :engine, String, "Specify a load engine (experimental)"
   global :o, :output, String, "Write output to the given file" do |v|
     String.disable_color
     Stella.log.output = v
